--- a/Day 1/studio_nudge.html
+++ b/Day 1/studio_nudge.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-	<div> 
+	<div id="first_line"> 
 		<a href="http://studionudge.com/"> Nudge </a>
 	</div>
-	<div> </div>
 
-	<div> WORK </div>
-	<div> ABOUT</div>
-	<div> CONTACT </div>
-	<div> JOURNAL </div>
+	<div id="first_line"> </div>
+	<div id="first_line"> WORK </div>
+	<div id="first_line"> ABOUT</div>
+	<div id="first_line"> CONTACT </div>
+	<div id="first_line"> JOURNAL </div>
 
+	<div id="border_line"> </div>
+	
 
 <p> Nudge is a creative design studio based in </p>
 <p> Charleston, South Carolina specializing in visual </p>
@@ -24,5 +26,18 @@
 <p> . . . </p>
 
 
+<img id="first_img" src="http://studionudge.com/images/lake-weekend-wear-stationery.jpg" />
+
+<img id="second_img" src="http://studionudge.com/images/hay-rosie-packaging-03.jpg" />
+
+<img id="third" src="http://studionudge.com/images/industry-standard-jeans-tag.jpg"/>
+<img id="fourth" src="http://studionudge.com/images/circle-21-business-cards.jpg"/>
+<img id="fifth" src="http://studionudge.com/images/browns-court-window-graphics.jpg"/>
+
+<div id="border_line" style="position: absolute; top: 1780px"> </div>
+<p id="contactOne"> INFO@STUDIONUDGE.COM </p>
+<p id="contactTwo"> 2014 NUDGE. ALL RIGHTS RESERVED. </p>
+
+<div id="gap"> </div>
 </body>
 </html>
