--- a/Day_2/belancio_2.html
+++ b/Day_2/belancio_2.html
@@ -24,21 +24,23 @@
 			ADMISSIONADO
 		</div>
 
-		<div class="image"></div>
+		<div class="image">
+			<img src="image_one.png"/>
+		</div>
 	</div>
 
 	<div class="middle">
 		<div class="clients">
-			OUR CLIENTS
+			Our Clients
 		</div>
 
 		<div class="bottom-logo">
-			<img style="height: 10%;"	src="http://www.belancio.com/images/design/admissionado.png"/>
-			<img style="height: 10%;" src="http://www.belancio.com/images/design/billione-rikko.png"/>
-			<img style="height: 10%;" src="http://www.belancio.com/images/design/progressive-resources.png"/>
-			<img style="height: 10%;" src="http://www.belancio.com/images/design/rightnow.png"/>
-			<img style="height: 10%;" src="http://www.belancio.com/images/design/golf-alliance.png"/>
-			<img style="height: 10%;" src="http://www.belancio.com/images/design/david-stryker.png"/>
+			<img style="height: 8%;"	src="http://www.belancio.com/images/design/admissionado.png"/>
+			<img style="height: 8%;" src="http://www.belancio.com/images/design/billione-rikko.png"/>
+			<img style="height: 8%;" src="http://www.belancio.com/images/design/progressive-resources.png"/>
+			<img style="height: 8%;" src="http://www.belancio.com/images/design/rightnow.png"/>
+			<img style="height: 8%;" src="http://www.belancio.com/images/design/golf-alliance.png"/>
+			<img style="height: 8%;" src="http://www.belancio.com/images/design/david-stryker.png"/>
 		</div>
 	</div>
 
@@ -52,12 +54,22 @@
 		</div>
 	</div>
 	
-	<div class="footer">
+	<div class="top-footer">
 		<div class="foot-name">
 			BELANCIO
 		</div>
 		<div class="foot-links">
 			About Design Contact
+		</div>
+	</div>
+
+	<div class="bottom-footer">
+		<div class="loveCali">
+			MADE WITH LOVE IN CALIFORNIA
+		</div>
+
+		<div class="copyRight">
+			© 2016. Belancio. All Rights Reserved.
 		</div>
 	</div>
 </body>
