day3 arvo version 2

--- a/Day_3/animate_bootstrap_2.html
+++ b/Day_3/animate_bootstrap_2.html
@@ -15,7 +15,7 @@
 				Animate.com
 			</h1>
 		</div>
-		<div class="text-center lead col-lg-12" style="padding-bottom:15px">
+		<div class="text-center lead col-lg-12">
 			Just-add-water CSS animations
 		</div>
 		<div class="dropdown text-center col-lg-12">
@@ -35,18 +35,18 @@
 						<a href="#"> rubberBand </a> 
 					</li>
 				</ul>
-			<button type="button" class="btn btn-primary btn-lg" style="width: 130px; border: 2px solid #E35F36; color: #E35F36; background-color: white;">
+			<button type="button" class="btn btn-primary btn-lg animate_button">
 				animate
 			</button>
 		</div>
 
 		<hr>
 
-		<div class="text-center col-lg-12" style="color: grey; padding-top:3px;">
+		<div class="text-center col-lg-12 link_one">
 			<a style="color: grey;" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css"> Download Animate.css </a> or <a style="color: grey;" href="https://github.com/daneden/animate.css"> View on GitHub </a>
 		</div>
 
-		<div class="text-center col-lg-12" style="padding-top: 15px; font-size: 13px; color: #676564;">
+		<div class="text-center col-lg-12 link_two">
 			Another thing from <a style="color: #676564;" href="https://daneden.me/"> Daniel Eden. </a>
 		</div>
 
