--- a/Week1_Project/home.html
+++ b/Week1_Project/home.html
@@ -34,7 +34,7 @@
 				<a href="travel.html">TRAVEL</a>
 			</div>
 			<div class="col-md-2 home-prof">
-				<a href="professional.html">PROFESSIONAL</a>
+				<a href="professional.html">Professional</a>
 			</div>
 		</div>
 	</div>	
